Update CSS to enhance layout and responsiveness; combine html and body styles for smoother scrolling and prevent horizontal overflow. Minor adjustments to footer alignment for improved visual consistency.

--- a/style.css
+++ b/style.css
@@ -7,8 +7,9 @@
 }
 
 
-html {
+html, body {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 
 }
 
@@ -555,8 +556,11 @@ footer {
         justify-content: center;
         align-items: center;
         text-align: center;
+        
 
     }
+   
+    
 
     .contacts img {
         width: 100%;
